--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gannikus.github.io"  # 你的域名 # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: geligulimeng
-github_username:  gannikus
+github_username: gannikus
 
 # Build settings
-# theme: minima
 remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
