--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Gannicus'blog
 email: gangannicus3@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal blog, sharing everything like technology, technology, life, AI, etc.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gannikus.github.io"  # 你的域名 # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: geligulimeng
