更新默认模板，添加响应式图片短代码示例；为博客文章添加分类和标签

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,7 @@ baseURL = "https://gannikus.github.io/"
 languageCode = "zh-cn"
 title = "Gannicus's Blog"
 theme = "ananke" 
+ 
+[taxonomies]
+	tag = "tags"
+	category = "categories"
